--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "concurrently \"nodemon\" \"npm run stripe\"",
     "stripe": "stripe listen --forward-to localhost:7000/api/order/checkout/webhook",
-    "build": "npm install && vite build",
+    "build": "npm install && npx tsc",
     "start": "node dist/index.js"
   },
   "keywords": [],
